--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ group = 'com.example.gradle'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 dependencies {
+    compile files('libs/gradledemo.jar')
+}
+
+dependencies {
 compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	//compile('org.springframework.boot:spring-boot-starter')
 	compile('mysql:mysql-connector-java')
